--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -50,9 +50,9 @@
                                  <label for="field-04">{{i18n.t('StockWHS')}}</label>
                                  <input id="field-04" [value]="varSTQT" readonly />
                               </div>
-                              <div class="four columns" style="opacity: 0;">
+                              <div class="four columns">
                                  <label for="field-05">{{i18n.t('StockPRD')}}</label>
-                                 <input id="field-05" value="" readonly />
+                                 <input id="field-05" [value]="varSSQT" readonly />
                               </div>
                               <div class="four columns">
                                  <label for="field-06">{{i18n.t('next_order_qty')}}</label>
